--- a/index.html
+++ b/index.html
@@ -1251,7 +1251,7 @@ pre[class*="language-"] {
   <article class="markdown-body"><h1 class="atx" id="main">Main</h1>
 <h5 class="atx" id="group---a">group - A</h5>
 <ul>
-<li><p><a href="%5CMark_Text.md">Mark Text</a></p>
+<li><p><a href="/Mark_Text.md">Mark Text</a></p>
 </li>
 <li><p>工事中</p>
 </li>
