--- a/index.html
+++ b/index.html
@@ -1251,9 +1251,9 @@ pre[class*="language-"] {
   <article class="markdown-body"><h1 class="atx" id="main">Main</h1>
 <h5 class="atx" id="group---a">group - A</h5>
 <ul>
-<li><p><a href="/mark_Text.html" target="_blank">Mark Text</a></p>
+<li><p>GitHub</p>
 </li>
-<li><p>工事中</p>
+<li><p><a href="/mark_Text.html" target="_blank">Mark Text</a> - 2025.03.10</p>
 </li>
 </ul>
 </article>
