--- a/GitHub.html
+++ b/GitHub.html
@@ -1257,9 +1257,9 @@ pre[class*="language-"] {
 <p>新しいサイトを作る場合はリポジトリを作成する</p>
 <img width="410" alt="" title="" src="img/2025-03-11-14-28-25-image.png">
 
-<p>ここにサイト名を記載して
+<p>ここにサイト名を記載して</p>
 <img width="405" alt="" title="" src="img/2025-03-11-14-30-01-image.png"> </p>
-<p>下図のボタンをクリックすればOK
+<p>下図のボタンをクリックすればOK</p>
 <img width="123" alt="" title="" src="img/2025-03-11-14-31-08-{C1357CC9-9B59-4A8F-8202-20F3BC70F1A8}.png"></p>
 <p>ページの追加は下記から。
 この時<code>img/test.txt</code> とかで登録するとフォルダが作れる。
