--- a/GitHub.html
+++ b/GitHub.html
@@ -1262,7 +1262,7 @@ pre[class*="language-"] {
 <p>下図のボタンをクリックすればOK</p>
 <img width="123" alt="" title="" src="img/2025-03-11-14-31-08-{C1357CC9-9B59-4A8F-8202-20F3BC70F1A8}.png"></p>
 <p>ページの追加は下記から。
-この時<code>img/test.txt</code> とかで登録するとフォルダが作れる。
+この時<code>img/test.txt</code> とかで登録するとフォルダが作れる。</br>
 このダミーで入れたファイルを消して空にしてしまうと、フォルダも消えるらしい。</p>
 <img width="383" alt="" title="" src="img/2025-03-11-14-35-02-image.png">
 
