--- a/index.html
+++ b/index.html
@@ -1249,7 +1249,7 @@ pre[class*="language-"] {
 </head>
 <body>
   <article class="markdown-body"><h1 class="atx" id="main">Main</h1>
-  <a href="https://github.com/doron-san/doron-san.github.io/tree/main" _target="_blank">GitHub - Edit</a>
+  <a href="https://github.com/doron-san/doron-san.github.io/tree/main"  target="_blank">GitHub - Edit</a>
 <h5 class="atx" id="group---a">group - A</h5>
 <ul>
 <li><p><a href="/GitHub.html" target="_bland">GitHub</a> - 2025.03.11</p>
