--- a/minecraft/mod_toho-LittleMade_recipe.html
+++ b/minecraft/mod_toho-LittleMade_recipe.html
@@ -386,7 +386,7 @@ code {
 <li>本</li>
 </ul>
 <p>※ 前提MOD <code>Patchouli</code> が必要
-※ 最も必要なのは祭壇の組み立てのサポート機能だろう
+※ 最も必要なのは祭壇の組み立てのサポート機能だろう<br>
 <img src="https://doron-san.github.io/img/2025.03.27-13.57.38.png" width="200"></p>
 <hr>
 <h3 id="%E3%83%A1%E3%82%A4%E3%83%89%E5%8F%AC%E5%96%9A">メイド召喚</h3>
