--- a/minecraft/mod_toho-LittleMade_recipe.html
+++ b/minecraft/mod_toho-LittleMade_recipe.html
@@ -402,7 +402,7 @@ code {
 <p><font color="red"> ※旧バージョンだと鉱石ブロックが必要だったっぽい・・・</font></p>
 <hr>
 <h3 id="%E3%82%B1%E3%83%BC%E3%82%AD">ケーキ</h3>
-<p>召喚後のメイドを仲間にする時に必要！
+<p>召喚後のメイドを仲間にする時に必要！<br>
 <img src="https://doron-san.github.io/img/2025.03.27-10.15.17.png" width="280"></p>
 <ul>
 <li>ミルク入りバケツ x3</li>
